--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minicabs.co.uk | Reliable London Transport Services</title>
+  <meta name="google-site-verification" content="EsnFd-OVRjP03i-BbqoLmYhyLFPKBmU8njDkFDbhCTA" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
