--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-6">Why Choose Minicabs Transport Services?</h3>
       <p class="text-lg">Minicabs.co.uk has been serving London since 1996, providing fixed-fare transport with licensed, professional drivers. We’re licensed by Transport for London offering 24/7 availability, transparent pricing, and a wide range of transport solutions from airport transfers to removals. Choose comfort, reliability, and peace of mind every time you travel.
-      <a href ="https://share.google/Bm8BKbLHDwn2n8Yta">minicabs harrow</a>
+      <a href="https://share.google/Bm8BKbLHDwn2n8Yta" class="text-blue-400">minicabs harrow</a>
       </p>
     </div>
   </section>
@@ -221,5 +221,6 @@ office removal services
 
 </body>
 </html>
+
 
 
